# agent-passport

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.integration.config.ts
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  question.md
.github/workflows/: ci.yml
alerts/: alert-rules.yml  alertmanager.yml  escalation-policy.yml  grafana-dashboard.json  prometheus-scrape.yml  slo-prod-relaxed.yml  slo-prod-strict.yml  slo.yml
alerts/runbooks/: agent-passport-api-down.md  (+7 more)
contracts/: registry.teal  reputation.teal
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  OBSERVABILITY.md  README.md  REPORT.md  SANCTIONS-INTEGRATION.md  SECURITY.md  TRUST-SCORING.md  bazaar-metadata.json  faq.md  getting-started.md  openapi.yaml  postman-collection.json
load-tests/: EXECUTION.md  REPORT.template.md  package.json  run-all.sh
public/: dashboard.html
scripts/: README.md  backup.sh  check-counterparty.ts  check-reputation.ts  check-sybil.ts  delegate.ts  deploy-registry.ts  deploy-reputation.ts  deploy-testnet.sh  estimate-credit.ts  record-reputation.ts  restore.sh  score.ts
sdk/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
sdk/python/: CHANGELOG.md  README.md  agent_passport.py  pyproject.toml
sdk/python/agent_passport/: __init__.py  client.py  errors.py  retry.py  types.py
sdk/python/tests/: __init__.py  test_client.py  test_retry.py
src/: app.ts  config.ts  counterparty.ts  credit.ts  delegation.ts  index.ts  passport.ts  registry.ts  reputation.ts  sybil.ts  trust-graph.ts  trust-score.ts  underwriting.ts
(+139 files in other folders)
